--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -5,7 +5,7 @@ spring:
     mysql_sy_dev:
       username: mysqlSy
       password: Mysql@2021
-      jdbc-url: jdbc:mysql://192.168.90.112:3306/sy_dev?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
+      url: jdbc:mysql://192.168.90.112:3306/sy_dev?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
       driver-class-name: com.mysql.jdbc.Driver
 mybatis:
   mapper-locations: classpath:mapper/*Mapper.xml
