--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -2,13 +2,14 @@ server:
   port: 8081
 spring:
   datasource:
-    mysql_sy_dev:
+      name: testDB
+      url: jdbc:mysql://192.168.90.112:3306/sy_dev??serverTimezone=GMT%2B8&useSSL=FALSE
       username: mysqlSy
       password: Mysql@2021
-      url: jdbc:mysql://192.168.90.112:3306/sy_dev?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
       driver-class-name: com.mysql.jdbc.Driver
 mybatis:
   mapper-locations: classpath:mapper/*Mapper.xml
   type-aliases-package: com.example.demo1.entity
+
 logging:
   config: classpath:logback-spring.xml
